--- a/HTML/italics.html
+++ b/HTML/italics.html
@@ -4,6 +4,11 @@
 <p>
 <font size = 30>
 This is a <i><u>CSS tag.</u></i>
+<ul>
+<li>Tea</li>
+<li>Coffee</li>
+<li>Orange Juice</li>
+</ul>
 </font>
 </p>
 </body>
