--- a/HTML/italics.html
+++ b/HTML/italics.html
@@ -1,15 +1,25 @@
 <html>
-<head><title>ITALICS</title></head>
+<head>
+<title>ITALICS</title>
+<link rel = "icon" type = "image/x-icon" href = "icon2.png">
+</head>
 <body>
 <p>
 <font size = 30>
 This is a <i><u>CSS tag.</u></i>
-<ul>
-<li>Tea</li>
-<li>Coffee</li>
-<li>Orange Juice</li>
-</ul>
+<ol type='1' start = '5'>
+    <li>Tea</li>
+    <li>Coffee</li>
+    <li>Orange Juice</li>
+</ol>
 </font>
 </p>
+<table cellpadding = 20 border = 2 bgcolor = "lime" align = "center">
+    <tr bgcolor="blue">
+    <th><font color = "maroon">Name</th></font>
+    <th>Roll No.</th>
+    <th>Subject</th></tr></font>
+    <font color = "white"><tr><td>Ankit Yadav</td> <td>28100120030</td><td>HTML</td></tr></font>
+
 </body>
 <html>
