--- a/HTML/italics.html
+++ b/HTML/italics.html
@@ -14,7 +14,7 @@ This is a <i><u>CSS tag.</u></i>
 </ol>
 </font>
 </p>
-<table cellpadding = 20 border = 2 bgcolor = "lime" align = "center">
+<table cellpadding = 20 border = 2 bgcolor = "yellow" align = "center">
     <tr bgcolor="blue">
     <th><font color = "maroon">Name</th></font>
     <th>Roll No.</th>
