--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <h1 align="center">My Resume</h1>
+        <h1 align="center"><u>My Resume</u></h1>
 
         <h2 align = "center">Software Engineer</h2>
 
